--- a/Aura/index.html
+++ b/Aura/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.min.css">
+    <link rel="stylesheet" href="style.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
@@ -34,7 +34,7 @@
             <div class="container header_container">
                 <div class="header-start">
                     <div class="header-logo_block">
-                        <a href="#" class="header-logo"><img src="./img/logo.png" alt="логотип компании аура"></a>
+                        <a href="#" class="header-logo"><img src="logo.png" alt="логотип компании аура"></a>
                     </div>
                     <button class="wallet"><svg width="36" height="36" viewBox="0 0 36 36" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
@@ -633,7 +633,7 @@
     </footer>
 
 
-    <script src="./js/script.js"></script>
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </body>
 
